<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="database_name">_un_folding_word_2</string>

    <string name="app_name">unfoldingWord</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="checking_entity">Checking Entity :</string>
    <string name="checking_level">Checking Level :</string>
    <string name="version">Version : </string>
    <string name="publish_date">Publish Date :</string>
    <string name="about_text">We use a three-level, Church-centric approach for identifying the fidelity of translated Biblical content :</string>
    <string name="finish">Finish</string>
    <string name="level_one">Level 1: internal — Translator (or team) affirms that translation is in line with Statement of Faith and Translation Guidelines.</string>
    <string name="level_two">Level 2: external — Translation is independently checked and confirmed by three church leaders not on the translation team.</string>
    <string name="level_three">Level 3: authenticated — Translation is checked and confirmed by leadership of at least three Church networks with native speakers of the language, or a translation consultant in coordination with a Church network.</string>

    <string name="selected_language">"SELECTED_LANGUAGE"</string>

    <string name="reset_base_url">Reset URL</string>

    <string name="next_chapter">Next Chapter</string>
    <string name="next_book">Go To</string>
    <string name="chapters">Chapters</string>

    <string name="status_explanation">Version Verification Status</string>
    <string name="status_verified">Verified</string>
    <string name="status_expired">Expired</string>
    <string name="status_error">Unknown</string>
    <string name="status_failed">Failed</string>

    <string name="preloaded_catalog_file_name">preloaded_data.json</string>
    <string name="preloaded_locales_file_name">locales_data.json</string>

    <string name="pref_default_base_url">https://api.unfoldingword.org/uw/txt/beta/catalog.json</string>
    <string name="pref_default_base_url_test">https://api.unfoldingword.org/uw/txt/2/catalog.json</string>
    <string name="old_pref_default_base_url">https://api.unfoldingword.org/ts/txt/2/catalog.json</string>
    <string name="languages_json_url">http://td.unfoldingword.org/exports/langnames.json</string>

    <string name="no_selected_version_text">Select Version</string>

    <string name="verified_button_char">✓</string>
    <string name="expired_button_char">!</string>
    <string name="unknown_button_char">\?</string>
    <string name="x_button_char">×</string>
    <string name="verification_title">Verification Information :</string>

    <string name="verified_title_start">This content is verified by: </string>
    <string name="expired_title_start">The verification of some or all of this content has expired.</string>
    <string name="error_title_start">We experienced an error while verifying content.</string>
    <string name="failed_title_start">*Warning* the validity of some or all of this content has failed. Use at your own risk</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="chapter_selection_title">Chapter Selection</string>
    <string name="version_select_title_string">Select Version</string>
    <string name="delete_version">Delete Version</string>

    <string name="application_version">Version</string>
    <string name="application_build_number">Build Number</string>
    <string name="intro_screen_title">App Information</string>
    <string name="version_information_title">Version Information</string>
    <string name="splash_loading_text">Loading Content...</string>

    <string name="delete_warning_text">Are you sure you want to delete this resource?</string>
    <string name="delete_audio_warning_text">Are you sure you want to delete this audio?</string>

    <string name="enable_p2p_button">P2P On/Off</string>
    <string name="discover_peers_button">Discover</string>
    <string name="connect_peer_button">Connect</string>
    <string name="find_devices">Find Devices</string>
    <string name="open_wifi">Open WiFi Settings</string>
    <string name="disconnect_peer_button">Disconnect</string>
    <string name="get_file_button">Send Version</string>
    <string name="p2p_off_warning">Enable P2P from action bar button above or system settings</string>
    <string name="empty"></string>
    <string name="client_text">This device will act as a client. Click on Gallery button to pick a local(stored) file</string>
    <string name="label_me">Your Device</string>
    <string name="label_peers">Other Devices</string>
    <string name="empty_message">No devices found. Turn on P2P and perform discovery from the Action Bar</string>

    <string name="share_keyboards_button_text">Share Versions</string>

    <string name="save_file_extension">.ufw</string>

    <string name="open_bible_stories_slug">obs</string>
    <string name="content_description_back_button">back</string>
</resources>
