<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#eee"
    android:id="@+id/device_detail_fragment_base_view">
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btn_activate_wifi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/open_wifi" />
            <Button
                android:id="@+id/btn_find_devices"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/find_devices" />
            <Button
                android:id="@+id/btn_connect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/connect_peer_button"
                android:visibility="gone"/>
            <Button
                android:id="@+id/btn_disconnect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/disconnect_peer_button"
                android:visibility="gone"/>
            <Button
                android:id="@+id/btn_start_client"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/get_file_button"
                android:visibility="gone"/>
        </LinearLayout>
        <!--<TextView-->
            <!--android:id="@+id/device_address"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content" />-->
        <TextView
            android:id="@+id/device_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <!--<TextView-->
            <!--android:id="@+id/group_owner"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content" />-->
        <!--<TextView-->
            <!--android:id="@+id/group_ip"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content" />-->

        <TextView
            android:paddingTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:textColor="@android:color/white"
            android:id="@+id/status_text">
        </TextView>


    </LinearLayout>
    <!--<LinearLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:id="@+id/status_bar"-->
        <!--android:orientation="vertical"-->
        <!--android:layout_gravity="bottom"-->
        <!--android:layout_height="37dp"-->
        <!--android:layout_marginBottom="3dp"-->
        <!--android:background="@android:color/background_dark">-->


    <!--</LinearLayout>-->
</FrameLayout>
