<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#fff"
    android:minWidth="300dp"
    android:id="@+id/verification_fragment_layout">

    <!--<TextView-->
        <!--android:textAppearance="?android:attr/textAppearanceMedium"-->
        <!--android:background="#555"-->
        <!--android:layout_gravity="center"-->
        <!--android:gravity="center"-->
        <!--android:layout_width="fill_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="@string/intro_screen_title"-->
        <!--android:textColor="@color/white_mix_gary" />-->

    <FrameLayout
        android:layout_marginTop="2dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#fff"
        android:padding="5dp">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:lineSpacingMultiplier="1"
                android:text="@string/about_text"
                android:textColor="#000"
                android:gravity="center_horizontal" />

            <LinearLayout
                android:id="@+id/level1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/level_one_dark"
                    android:layout_gravity="center_vertical" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:text="@string/level_one"
                    android:textColor="#000" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"

                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/level_two_dark"
                    android:layout_gravity="center_vertical" />

                <TextView
                    android:id="@+id/textView6"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:text="@string/level_two"
                    android:textColor="#000" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"

                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/level_three_dark"
                    android:layout_gravity="center_vertical" />

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"

                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:text="@string/level_three"
                    android:textColor="#000" />
            </LinearLayout>

        </LinearLayout>

    </FrameLayout>

    <LinearLayout
        android:padding="5dp"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:clickable="false"
        android:background="#fff"
        android:layout_marginTop="2dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/status_explanation"
            android:id="@+id/textView3"
            android:layout_gravity="center_horizontal"
            android:textColor="#000"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:layout_gravity="center_horizontal">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_marginRight="10dp">

                <Button
                    android:text="@string/verified_button_char"
                    android:textStyle="bold"
                    android:textColor="#FFFFFF"
                    android:textSize="@dimen/verification_button_text_size"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:background="@drawable/green_checkmark"
                    android:layout_gravity="center_vertical"
                    />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/status_verified"
                    android:id="@+id/verified_textView"
                    android:layout_gravity="center_vertical"
                    android:paddingLeft="5dp"
                    android:textColor="#000"
                    />

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_marginRight="10dp">

                <Button
                    android:text="@string/expired_button_char"
                    android:textStyle="bold"
                    android:textColor="#FFFFFF"
                    android:textSize="@dimen/verification_button_text_size"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:background="@drawable/yellow_exclamation_point"
                    android:layout_gravity="center_vertical"
                    />

                <TextView
                    android:textColor="#000"
                    android:paddingLeft="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/status_expired"
                    android:id="@+id/expired_textView"
                    android:layout_gravity="center_vertical" />

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent">

                <Button
                    android:text="@string/x_button_char"
                    android:textColor="#fff"
                    android:textSize="@dimen/verification_button_text_size"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:background="@drawable/red_x_button"
                    android:layout_gravity="center_vertical"
                    />

                <TextView
                    android:paddingLeft="5dp"
                    android:textColor="#000"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/status_failed"
                    android:id="@+id/failed_textView"
                    android:layout_gravity="center_vertical" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="5dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center">

        <Button
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:background="@drawable/green_button_selector"
            android:textColor="#fff"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Translation Guidelines"
            android:id="@+id/translation_guidelines_button"
            android:textAppearance="?android:attr/textAppearanceMedium"
            />

        <Button
            android:layout_marginTop="5dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:background="@drawable/green_button_selector"
            android:textColor="#fff"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Statement Of Faith"
            android:id="@+id/statement_of_faith_button"
            android:textAppearance="?android:attr/textAppearanceMedium"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_marginTop="2dp"
        android:padding="10dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="#fff">

        <TextView
            android:gravity="center"
            android:id="@+id/version_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="preliminary"
            android:textColor="#000" />
    </LinearLayout>


</LinearLayout>